RESOLVED FIXED60966
Web Inspector: model-based CSS editing does not update @import-ed stylesheet resources
https://bugs.webkit.org/show_bug.cgi?id=60966
Summary Web Inspector: model-based CSS editing does not update @import-ed stylesheet ...
Alexander Pavlov (apavlov)
Reported 2011-05-17 09:31:21 PDT
Edit any rule from any stylesheet which is imported as @import url(...) and examine the Resources panel. The corresponding resource is not updated and there is no new revision there. Upstreaming http://code.google.com/p/chromium/issues/detail?id=81838
Attachments
[PATCH] Suggested fix (9.33 KB, patch)
2011-05-18 02:55 PDT, Alexander Pavlov (apavlov)
no flags
[PATCH] Comments addressed (11.25 KB, patch)
2011-05-18 03:21 PDT, Alexander Pavlov (apavlov)
pfeldman: review+
Alexander Pavlov (apavlov)
Comment 1 2011-05-18 02:55:22 PDT
Created attachment 93890 [details] [PATCH] Suggested fix
Pavel Feldman
Comment 2 2011-05-18 03:00:03 PDT
Comment on attachment 93890 [details] [PATCH] Suggested fix View in context: https://bugs.webkit.org/attachment.cgi?id=93890&action=review > Source/WebCore/inspector/InspectorCSSAgent.cpp:273 > + collectStyleSheets(static_cast<CSSStyleSheet*>(styleSheet), styleInfos->get(), maxImportDepth); Could you please test this scenario? > Source/WebCore/inspector/InspectorCSSAgent.cpp:431 > + collectStyleSheets(static_cast<CSSStyleSheet*>(importedStyleSheet), result, depth - 1); What if A and B import C. Does C stylesheet materialize into two different CSSStyleSheet instances?
Alexander Pavlov (apavlov)
Comment 3 2011-05-18 03:07:25 PDT
(In reply to comment #2) > (From update of attachment 93890 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=93890&action=review > > > Source/WebCore/inspector/InspectorCSSAgent.cpp:273 > > + collectStyleSheets(static_cast<CSSStyleSheet*>(styleSheet), styleInfos->get(), maxImportDepth); > > Could you please test this scenario? Done. > > Source/WebCore/inspector/InspectorCSSAgent.cpp:431 > > + collectStyleSheets(static_cast<CSSStyleSheet*>(importedStyleSheet), result, depth - 1); > > What if A and B import C. Does C stylesheet materialize into two different CSSStyleSheet instances? Yes, it does.
Alexander Pavlov (apavlov)
Comment 4 2011-05-18 03:21:35 PDT
Created attachment 93893 [details] [PATCH] Comments addressed
Alexander Pavlov (apavlov)
Comment 5 2011-05-18 06:33:54 PDT
Note You need to log in before you can comment on or make changes to this bug.