2011-05-18  Alexander Pavlov  <apavlov@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: model-based CSS editing does not update @import-ed stylesheet resources
        https://bugs.webkit.org/show_bug.cgi?id=60966

        * inspector/styles/resources/styles-new-API-1.css:
        * inspector/styles/resources/styles-new-API-2.css: Copied from LayoutTests/inspector/styles/resources/styles-new-API-1.css.
        (@page):
        (@page :first):
        (#absent-id):
        (@font-face):
        (body):
        * inspector/styles/styles-new-API-expected.txt:
2011-05-18  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: model-based CSS editing does not update @import-ed stylesheet resources
        https://bugs.webkit.org/show_bug.cgi?id=60966

        Imported stylesheets didn't use to be returned by InspectorCSSAgent.

        * inspector/InspectorCSSAgent.cpp:
        (WebCore::InspectorCSSAgent::getAllStyleSheets):
        (WebCore::InspectorCSSAgent::collectStyleSheets):
        * inspector/InspectorCSSAgent.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@86754 bbb929c8-8fbe-4397-9dbb-9b2b20218538