third_party/WebKit/Source/WebCore/inspector/InspectorCSSAgent.h
@@ -85,6 +85,7 @@ private:
 
     InspectorStyleSheetForInlineStyle* asInspectorStyleSheet(Element* element);
     Element* elementForId(ErrorString*, int nodeId);
+    void collectStyleSheets(CSSStyleSheet*, InspectorArray*);
 
     InspectorStyleSheet* bindStyleSheet(CSSStyleSheet*);
     InspectorStyleSheet* viaInspectorStyleSheet(Document*, bool createIfAbsent);
